--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,27 @@
 steps:
-
   # Build app
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/ninth-history-314409/cloud-run:$COMMIT_SHA', '.']
     id: BUILD
 
-  # Storage of the image
+  # Push the image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/ninth-history-314409/cloud-run:$COMMIT_SHA']
     id: STORAGE
 
-  # Deploy
+  # Deploy the image to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['run', 'deploy', 'cloud-run',
-          '--image', 'gcr.io/ninth-history-314409/cloud-run:$COMMIT_SHA',
-          '--region', 'us-central1',
-          '--platform', 'managed',
-          '--no-traffic',
-          '--allow-unauthenticated']
+    args: [
+      'run', 'deploy', 'cloud-run',
+      '--image', 'gcr.io/ninth-history-314409/cloud-run:$COMMIT_SHA',
+      '--region', 'us-central1',
+      '--platform', 'managed',
+      '--no-traffic',
+      '--allow-unauthenticated'
+    ]
     id: DEPLOY
 
+options:
+  logging: CLOUD_LOGGING_ONLY
 
-  options:
-    logging: CLOUD_LOGGING_ONLY  
 
